[gd_scene load_steps=15 format=2]

[ext_resource path="res://Overworld.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Art_Assets/MainCharacterAnimation.png" type="Texture" id=3]
[ext_resource path="res://Wander.gd" type="Script" id=4]
[ext_resource path="res://Art_Assets/CharacterSprites.png" type="Texture" id=5]
[ext_resource path="res://Art_Assets/ApartmentMain.png" type="Texture" id=6]
[ext_resource path="res://Elevator.gd" type="Script" id=7]
[ext_resource path="res://Fonts/munro/Munro.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8.85156, 24.7474 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 446.204, 1.80487 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 316.922, 1.9989 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="DynamicFont" id=5]

size = 36
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 36
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Characters" type="Node" parent="." index="0"]

[node name="Player" type="KinematicBody2D" parent="Characters" index="0"]

position = Vector2( 297.744, 556.439 )
z_index = 2
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Pause", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}
bottomElevator = NodePath("../../Apartment/ApartmentMain/Elevators/Bottom")
topElevator = NodePath("../../Apartment/ApartmentMain/Elevators/Top")

[node name="PlayerSprite" type="Sprite" parent="Characters/Player" index="0"]

scale = Vector2( 0.752976, 0.752976 )
texture = ExtResource( 3 )
vframes = 3
hframes = 4
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Characters/Player" index="1"]

shape = SubResource( 1 )

[node name="CatLady" type="KinematicBody2D" parent="Characters" index="1"]

position = Vector2( 437.76, 338.621 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Pause", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="NPCSprite" type="Sprite" parent="Characters/CatLady" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
vframes = 3
hframes = 4
region_enabled = true
region_rect = Rect2( 123, 8, 23, 62 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Characters/CatLady" index="1"]

position = Vector2( -0.330471, 0 )
scale = Vector2( 1.20069, 1 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Artist" type="KinematicBody2D" parent="Characters" index="2"]

editor/display_folded = true
position = Vector2( 252.069, 410.836 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="NPCSprite" type="Sprite" parent="Characters/Artist" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
vframes = 3
hframes = 4
region_enabled = true
region_rect = Rect2( 10, 70, 23, 64 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Characters/Artist" index="1"]

position = Vector2( -0.162646, -0.550459 )
scale = Vector2( 1.23404, 1.05304 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Student" type="KinematicBody2D" parent="Characters" index="3"]

editor/display_folded = true
position = Vector2( 319.386, 494.018 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="NPCSprite" type="Sprite" parent="Characters/Student" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
vframes = 3
hframes = 4
region_enabled = true
region_rect = Rect2( 10, 148, 26, 63 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Characters/Student" index="1"]

position = Vector2( -0.078584, 0.00624247 )
scale = Vector2( 1.40081, 1.03644 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Hoarder" type="KinematicBody2D" parent="Characters" index="4"]

editor/display_folded = true
position = Vector2( 609.671, 258.511 )
z_index = 1
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "Pause", "Z Index", "collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="NPCSprite" type="Sprite" parent="Characters/Hoarder" index="0"]

scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
vframes = 3
hframes = 4
region_enabled = true
region_rect = Rect2( 216, 7, 16, 63 )
_sections_unfolded = [ "Animation", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Characters/Hoarder" index="1"]

position = Vector2( 0.233667, 0.00624247 )
scale = Vector2( 1.10195, 1.03644 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Apartment" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="ApartmentMain" type="Sprite" parent="Apartment" index="0"]

position = Vector2( 433.621, 299.73 )
scale = Vector2( 0.752976, 0.752976 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ApartmentBoxes" type="Node" parent="Apartment/ApartmentMain" index="0"]

[node name="StaticBody2D" type="StaticBody2D" parent="Apartment/ApartmentMain/ApartmentBoxes" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="FirstFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="0"]

position = Vector2( 441.442, 583.372 )
shape = SubResource( 2 )

[node name="SecondFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="1"]

position = Vector2( 413.258, 520.879 )
shape = SubResource( 3 )

[node name="ThirdFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="2"]

position = Vector2( 412.895, 438.254 )
shape = SubResource( 3 )

[node name="FourthFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="3"]

position = Vector2( 534.881, 364.967 )
shape = SubResource( 3 )

[node name="FifthFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="4"]

position = Vector2( 585.111, 286.769 )
shape = SubResource( 3 )

[node name="SixthFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="5"]

position = Vector2( 552.489, 208.524 )
shape = SubResource( 3 )

[node name="SeventhFloor" type="CollisionShape2D" parent="Apartment/ApartmentMain/ApartmentBoxes/StaticBody2D" index="6"]

position = Vector2( 555.836, 137.616 )
shape = SubResource( 3 )

[node name="Doors" type="Node" parent="Apartment/ApartmentMain" index="1"]

[node name="HoarderDoor" type="Sprite" parent="Apartment/ApartmentMain/Doors" index="0"]

position = Vector2( 608.792, 256.201 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 235, 8, 50, 73 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="CatLadyDoor" type="Sprite" parent="Apartment/ApartmentMain/Doors" index="1"]

position = Vector2( 437.615, 336.207 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 161, 3, 29, 67 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="ArtistDoor" type="Sprite" parent="Apartment/ApartmentMain/Doors" index="2"]

position = Vector2( 250.629, 408.891 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 37, 70, 29, 67 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="StudentDoor" type="Sprite" parent="Apartment/ApartmentMain/Doors" index="3"]

position = Vector2( 319.007, 492.032 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 38, 144, 29, 67 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Food" type="Sprite" parent="Apartment/ApartmentMain/Doors/StudentDoor" index="0"]

position = Vector2( -38.8651, 27.4968 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 71, 199, 42, 12 )
_sections_unfolded = [ "Region" ]

[node name="PlayerDoor" type="Sprite" parent="Apartment/ApartmentMain/Doors" index="4"]

position = Vector2( 540.575, 108.748 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 41, 1, 29, 67 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="Elevators" type="Node" parent="Apartment/ApartmentMain" index="2"]

[node name="Bottom" type="Area2D" parent="Apartment/ApartmentMain/Elevators" index="0"]

position = Vector2( 474.863, 558.929 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 7 )
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Pickable", "Transform", "Visibility", "Z Index" ]

[node name="Bottom" type="CollisionShape2D" parent="Apartment/ApartmentMain/Elevators/Bottom" index="0"]

position = Vector2( -3.5401, -0.394409 )
scale = Vector2( 1.95968, 2.40513 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Top" type="Area2D" parent="Apartment/ApartmentMain/Elevators" index="1"]

position = Vector2( 474.863, 496.152 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Top" type="CollisionShape2D" parent="Apartment/ApartmentMain/Elevators/Top" index="0"]

position = Vector2( -3.5401, -0.219543 )
scale = Vector2( 1.95968, 2.40513 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Menu" type="Node" parent="." index="2"]

[node name="Container" type="Container" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -462.0
margin_right = 2.0
margin_bottom = -462.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="Menu/Container" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -139.0
margin_right = 139.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Neighbor"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ButtonContainer" type="VBoxContainer" parent="Menu/Container" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -20.0
margin_right = 73.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Material", "Visibility" ]

[node name="PlayButton" type="Button" parent="Menu/Container/ButtonContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 129.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play"
flat = false
align = 1
_sections_unfolded = [ "Material", "Visibility", "custom_fonts" ]

[node name="SettingsButton" type="Button" parent="Menu/Container/ButtonContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 129.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 1
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Settings"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Mouse", "custom_fonts" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

position = Vector2( 512, -161 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="Apartment/ApartmentMain/Elevators/Bottom" to="Characters/Player" method="_on_Bottom_body_entered"]

[connection signal="body_entered" from="Apartment/ApartmentMain/Elevators/Top" to="Characters/Player" method="_on_Top_body_entered"]

[connection signal="pressed" from="Menu/Container/ButtonContainer/PlayButton" to="." method="_on_PlayButton_pressed"]


